@@ -1,3 +1,10 @@
+2011-08-10    <zag@manzanillo>
+
+	* tools/build_dependency.py: another quick and dirty importer for
+	Ilenia style csv. This one should be less lenient on ambiguos
+	records. It makes extract_individuals.py and extract_samples.py
+	obsolete.
+
 2011-08-09    <zag@manzanillo>
 
 	* bl/vl/kb/drivers/omero/genotyping.py
